ProyectoLex/parser.output
Nonterminals useless in grammar

   ordinal_type_identifier
   real_type
   real_type_identifier
   pointer_type_identifier
   file_buffer_symbol
   pointer_object_symbol
   result_type
   regular_unit
   unit_heading
   interface_part
   uses_clause_empty
   constant_declaration_part_empty
   type_declaration_part_empty
   variable_declaration_part_empty
   procedure_and_function_declaration_part_empty
   implementation_part


Terminals unused in grammar

   "unit"
   "interface"
   "implementation"
   "real"
   "integer"
   "longint"
   "word"
   "char"
   "boolean"
   "true"
   "false"
   "read"
   "readln"
   "write"
   "writeln"
   ASSIGNMENT_PRECEDENCE
   "<>"
   "<="
   ">="
   POSITIVE
   NEGATIVE


Rules useless in grammar

  220 ordinal_type_identifier: IDENTIFIER

  221 real_type: real_type_identifier

  222 real_type_identifier: IDENTIFIER

  223 pointer_type_identifier: IDENTIFIER

  224 file_buffer_symbol: '^'

  225 pointer_object_symbol: '^'

  226 result_type: ordinal_type_identifier
  227            | real_type_identifier
  228            | pointer_type_identifier

  229 regular_unit: unit_heading ';' interface_part implementation_part "end" '.'

  230 unit_heading: "unit" IDENTIFIER

  231 interface_part: "interface" uses_clause_empty constant_declaration_part_empty type_declaration_part_empty variable_declaration_part_empty procedure_and_function_declaration_part_empty

  232 uses_clause_empty: uses_clause
  233                  | /* empty */

  234 constant_declaration_part_empty: constant_declaration_part
  235                                | /* empty */

  236 type_declaration_part_empty: type_declaration_part
  237                            | /* empty */

  238 variable_declaration_part_empty: variable_declaration_part
  239                                | /* empty */

  240 procedure_and_function_declaration_part_empty: procedure_and_function_declaration_part
  241                                              | /* empty */

  242 implementation_part: "implementation" constant_declaration_part_empty type_declaration_part_empty variable_declaration_part_empty procedure_and_function_declaration_part_empty


State 296 conflicts: 1 shift/reduce
State 313 conflicts: 1 shift/reduce
State 342 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_heading ';' block
    2        | program_heading ';' uses_clause ';' block

    3 program_heading: "program" IDENTIFIER
    4                | "program" IDENTIFIER '(' program_parameters ')'

    5 program_parameters: identifier_list

    6 uses_clause: "uses" identifier_list

    7 block: label_declaration_part constant_declaration_part type_declaration_part variable_declaration_part procedure_and_function_declaration_part statement_part

    8 label_declaration_part: "label" label_list ';'
    9                       | /* empty */

   10 label_list: label_list ',' label
   11           | label

   12 label: DECIMAL_INT

   13 constant_declaration_part: "const" constant_declaration_list
   14                          | /* empty */

   15 constant_declaration_list: constant_declaration_list constant_declaration
   16                          | constant_declaration

   17 constant_declaration: IDENTIFIER '=' constant ';'

   18 constant: constant_identifier
   19         | sign constant_identifier
   20         | DECIMAL_INT
   21         | HEXADECIMAL
   22         | REAL_DECIMAL
   23         | QUOTED_STRING
   24         | QUOTED_CHAR

   25 constant_identifier: IDENTIFIER

   26 type_declaration_part: "type" type_declaration_list
   27                      | /* empty */

   28 type_declaration_list: type_declaration_list type_declaration
   29                      | type_declaration

   30 type_declaration: IDENTIFIER '=' type ';'

   31 variable_declaration_part: "var" variable_declaration_list
   32                          | /* empty */

   33 variable_declaration_list: variable_declaration_list variable_declaration
   34                          | variable_declaration

   35 variable_declaration: identifier_list ':' type ';'

   36 procedure_and_function_declaration_part: procedure_and_function_declaration_list
   37                                        | /* empty */

   38 procedure_and_function_declaration_list: procedure_and_function_declaration_list procedure_and_function_declaration
   39                                        | procedure_and_function_declaration

   40 procedure_and_function_declaration: procedure_declaration
   41                                   | function_declaration

   42 statement_part: compound_statement

   43 sign: '+'
   44     | '-'

   45 identifier_list: identifier_list ',' IDENTIFIER
   46                | IDENTIFIER

   47 type: simple_type
   48     | structured_type
   49     | pointer_type
   50     | IDENTIFIER

   51 simple_type: ordinal_type
   52            | string_type

   53 ordinal_type: subrange_type
   54             | enumerated_type

   55 enumerated_type: '(' identifier_list ')'

   56 subrange_type: constant ".." constant

   57 string_type: "string" '[' DECIMAL_INT ']'

   58 structured_type: "packed" type_list
   59                | type_list

   60 type_list: array_type
   61          | set_type
   62          | file_type
   63          | record_type

   64 array_type: "array" '[' index_type_list ']' "of" type

   65 index_type_list: index_type_list ',' ordinal_type
   66                | ordinal_type

   67 record_type: "record" "end"
   68            | "record" field_list "end"

   69 field_list: fixed_part
   70           | fixed_part ';'
   71           | fixed_part ';' variant_part
   72           | fixed_part ';' variant_part ';'
   73           | variant_part
   74           | variant_part ';'

   75 fixed_part: fixed_part ';' field_declaration
   76           | field_declaration

   77 field_declaration: identifier_list ':' type

   78 variant_part: "case" tag_field_type "of" variant_list
   79             | "case" IDENTIFIER ':' tag_field_type "of" variant_list

   80 variant_list: variant_list ';' variant
   81             | variant

   82 variant: constant_list ':' '(' ')'
   83        | constant_list ':' '(' field_list ')'

   84 constant_list: constant_list ',' constant
   85              | constant

   86 tag_field_type: IDENTIFIER

   87 set_type: "set" "of" ordinal_type

   88 file_type: "file"
   89          | "of" type

   90 pointer_type: '^' base_type

   91 base_type: IDENTIFIER

   92 variable_reference: variable_identifier qualifier_list

   93 variable_identifier: IDENTIFIER

   94 qualifier_list: qualifier_list qualifier
   95               | qualifier

   96 qualifier: index
   97          | field_designator
   98          | '^'

   99 index: '[' expression_list ']'

  100 expression_list: expression_list ',' expression
  101                | expression

  102 field_designator: '.' IDENTIFIER

  103 unsigned_constant: unsigned_number
  104                  | QUOTED_STRING
  105                  | "nil"

  106 unsigned_number: DECIMAL_INT
  107                | HEXADECIMAL
  108                | REAL_DECIMAL

  109 factor: variable_reference
  110       | '@' variable_reference
  111       | unsigned_constant
  112       | function_call
  113       | set_constructor
  114       | '(' expression ')'
  115       | "not" factor
  116       | IDENTIFIER

  117 term: term term_operator_list factor
  118     | factor

  119 term_operator_list: '*'
  120                   | '/'
  121                   | "div"
  122                   | "mod"
  123                   | "and"

  124 simple_expression: sign simple_expression_term_operator_iterable
  125                  | simple_expression_term_operator_iterable

  126 simple_expression_term_operator_iterable: simple_expression_term_operator_iterable simple_expression_term_operator_list term
  127                                         | term

  128 simple_expression_term_operator_list: '+'
  129                                     | '-'
  130                                     | "or"

  131 expression: simple_expression
  132           | relational_operator simple_expression

  133 relational_operator: '='
  134                    | '<'
  135                    | '>'
  136                    | LE
  137                    | RE
  138                    | NOTEQUAL
  139                    | "in"

  140 function_call: function_identifier actual_parameter_list

  141 function_identifier: IDENTIFIER

  142 actual_parameter_list: '(' actual_parameter_iterable ')'

  143 actual_parameter_iterable: actual_parameter_iterable ',' actual_parameter
  144                          | actual_parameter

  145 actual_parameter: expression

  146 procedure_identifier: IDENTIFIER

  147 set_constructor: '[' ']'
  148                | '[' member_group_list ']'

  149 member_group_list: member_group_list ',' member_group
  150                  | member_group

  151 member_group: expression
  152             | expression ".." expression

  153 statement: /* empty */
  154          | label ':'
  155          | label ':' simple_statement
  156          | label ':' structured_statement
  157          | simple_statement
  158          | structured_statement

  159 simple_statement: assignment_statement
  160                 | procedure_statement
  161                 | goto_statement

  162 assignment_statement: variable_reference ":=" expression
  163                     | function_identifier ":=" expression

  164 procedure_statement: procedure_identifier
  165                    | procedure_identifier actual_parameter_list

  166 goto_statement: "goto" label

  167 structured_statement: compound_statement
  168                     | conditional_statement
  169                     | repetitive_statement
  170                     | with_statement

  171 compound_statement: "begin" statement_list "end"

  172 statement_list: statement_list ';' statement
  173               | statement

  174 conditional_statement: if_statement
  175                      | case_statement

  176 if_statement: "if" expression "then" statement
  177             | "if" expression "then" statement "else" statement

  178 case_statement: "case" expression "of" case_list "end"
  179               | "case" expression "of" case_list otherwise_clause "end"
  180               | "case" expression "of" case_list otherwise_clause ';' "end"
  181               | "case" expression "of" case_list ';' "end"

  182 case_list: case_list ',' case
  183          | case

  184 case: constant_list ':' statement

  185 otherwise_clause: ';' "otherwise" statement

  186 repetitive_statement: repeat_statement
  187                     | while_statement
  188                     | for_statement

  189 repeat_statement: "repeat" statement_list "until" expression

  190 while_statement: "while" expression "do" statement

  191 for_statement: "for" control_variable ":=" initial_value "to" final_value "do" statement
  192              | "for" control_variable ":=" initial_value "downto" final_value "do" statement

  193 control_variable: IDENTIFIER

  194 initial_value: expression

  195 final_value: expression

  196 with_statement: "with" record_variable_reference_list "do" statement

  197 record_variable_reference_list: record_variable_reference_list ',' variable_reference
  198                               | variable_reference

  199 procedure_declaration: procedure_heading ';' procedure_body ';'

  200 procedure_body: block
  201               | "forward"
  202               | "external"

  203 procedure_heading: "procedure" IDENTIFIER
  204                  | "procedure" IDENTIFIER formal_parameter_list

  205 function_declaration: function_heading ';' function_body ';'

  206 function_body: block
  207              | "forward"
  208              | "external"

  209 function_heading: "function" IDENTIFIER ':' IDENTIFIER
  210                 | "function" IDENTIFIER formal_parameter_list ':' IDENTIFIER

  211 formal_parameter_list: '(' formal_parameter_list_iterable ')'

  212 formal_parameter_list_iterable: formal_parameter_list_iterable ';' formal_parameter_list_iterable_list
  213                               | formal_parameter_list_iterable_list

  214 formal_parameter_list_iterable_list: parameter_declaration
  215                                    | procedure_heading
  216                                    | function_heading

  217 parameter_declaration: "var" identifier_list ':' type_identifier
  218                      | identifier_list ':' type_identifier

  219 type_identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 4 55 82 83 114 142 211
')' (41) 4 55 82 83 114 142 211
'*' (42) 119
'+' (43) 43 128
',' (44) 10 45 65 84 100 143 149 182 197
'-' (45) 44 129
'.' (46) 102
'/' (47) 120
':' (58) 35 77 79 82 83 154 155 156 184 209 210 217 218
';' (59) 1 2 8 17 30 35 70 71 72 74 75 80 172 180 181 185 199 205 212
'<' (60) 134
'=' (61) 17 30 133
'>' (62) 135
'@' (64) 110
'[' (91) 57 64 99 147 148
']' (93) 57 64 99 147 148
'^' (94) 90 98
error (256)
DECIMAL_INT (258) 12 20 57 106
HEXADECIMAL (259) 21 107
REAL_DECIMAL (260) 22 108
IDENTIFIER (261) 3 4 17 25 30 45 46 50 79 86 91 93 102 116 141 146
    193 203 204 209 210 219
QUOTED_STRING (262) 23 104
QUOTED_CHAR (263) 24
"program" (264) 3 4
"begin" (265) 171
"uses" (266) 6
"unit" (267)
"interface" (268)
"implementation" (269)
"label" (270) 8
"const" (271) 13
"type" (272) 26
"real" (273)
"integer" (274)
"longint" (275)
"word" (276)
"char" (277)
"boolean" (278)
"true" (279)
"false" (280)
"string" (281) 57
"packed" (282) 58
"array" (283) 64
"record" (284) 67 68
"end" (285) 67 68 171 178 179 180 181
"case" (286) 78 79 178 179 180 181
"otherwise" (287) 185
"of" (288) 64 78 79 87 89 178 179 180 181
"set" (289) 87
"var" (290) 31 217
"forward" (291) 201 207
"external" (292) 202 208
"function" (293) 209 210
"procedure" (294) 203 204
"file" (295) 88
"goto" (296) 166
"if" (297) 176 177
"then" (298) 176 177
"else" (299) 177
"repeat" (300) 189
"until" (301) 189
"while" (302) 190
"do" (303) 190 191 192 196
"for" (304) 191 192
"to" (305) 191
"downto" (306) 192
"with" (307) 196
"nil" (308) 105
"read" (309)
"readln" (310)
"write" (311)
"writeln" (312)
"in" (313) 139
"or" (314) 130
"div" (315) 121
"mod" (316) 122
"and" (317) 123
"not" (318) 115
ASSIGNMENT_PRECEDENCE (319)
":=" (320) 162 163 191 192
".." (321) 56 152
"<>" (322)
"<=" (323)
">=" (324)
RE (325) 137
LE (326) 136
NOTEQUAL (327) 138
POSITIVE (328)
NEGATIVE (329)


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
program (93)
    on left: 1 2, on right: 0
program_heading (94)
    on left: 3 4, on right: 1 2
program_parameters (95)
    on left: 5, on right: 4
uses_clause (96)
    on left: 6, on right: 2
block (97)
    on left: 7, on right: 1 2 200 206
label_declaration_part (98)
    on left: 8 9, on right: 7
label_list (99)
    on left: 10 11, on right: 8 10
label (100)
    on left: 12, on right: 10 11 154 155 156 166
constant_declaration_part (101)
    on left: 13 14, on right: 7
constant_declaration_list (102)
    on left: 15 16, on right: 13 15
constant_declaration (103)
    on left: 17, on right: 15 16
constant (104)
    on left: 18 19 20 21 22 23 24, on right: 17 56 84 85
constant_identifier (105)
    on left: 25, on right: 18 19
type_declaration_part (106)
    on left: 26 27, on right: 7
type_declaration_list (107)
    on left: 28 29, on right: 26 28
type_declaration (108)
    on left: 30, on right: 28 29
variable_declaration_part (109)
    on left: 31 32, on right: 7
variable_declaration_list (110)
    on left: 33 34, on right: 31 33
variable_declaration (111)
    on left: 35, on right: 33 34
procedure_and_function_declaration_part (112)
    on left: 36 37, on right: 7
procedure_and_function_declaration_list (113)
    on left: 38 39, on right: 36 38
procedure_and_function_declaration (114)
    on left: 40 41, on right: 38 39
statement_part (115)
    on left: 42, on right: 7
sign (116)
    on left: 43 44, on right: 19 124
identifier_list (117)
    on left: 45 46, on right: 5 6 35 45 55 77 217 218
type (118)
    on left: 47 48 49 50, on right: 30 35 64 77 89
simple_type (119)
    on left: 51 52, on right: 47
ordinal_type (120)
    on left: 53 54, on right: 51 65 66 87
enumerated_type (121)
    on left: 55, on right: 54
subrange_type (122)
    on left: 56, on right: 53
string_type (123)
    on left: 57, on right: 52
structured_type (124)
    on left: 58 59, on right: 48
type_list (125)
    on left: 60 61 62 63, on right: 58 59
array_type (126)
    on left: 64, on right: 60
index_type_list (127)
    on left: 65 66, on right: 64 65
record_type (128)
    on left: 67 68, on right: 63
field_list (129)
    on left: 69 70 71 72 73 74, on right: 68 83
fixed_part (130)
    on left: 75 76, on right: 69 70 71 72 75
field_declaration (131)
    on left: 77, on right: 75 76
variant_part (132)
    on left: 78 79, on right: 71 72 73 74
variant_list (133)
    on left: 80 81, on right: 78 79 80
variant (134)
    on left: 82 83, on right: 80 81
constant_list (135)
    on left: 84 85, on right: 82 83 84 184
tag_field_type (136)
    on left: 86, on right: 78 79
set_type (137)
    on left: 87, on right: 61
file_type (138)
    on left: 88 89, on right: 62
pointer_type (139)
    on left: 90, on right: 49
base_type (140)
    on left: 91, on right: 90
variable_reference (141)
    on left: 92, on right: 109 110 162 197 198
variable_identifier (142)
    on left: 93, on right: 92
qualifier_list (143)
    on left: 94 95, on right: 92 94
qualifier (144)
    on left: 96 97 98, on right: 94 95
index (145)
    on left: 99, on right: 96
expression_list (146)
    on left: 100 101, on right: 99 100
field_designator (147)
    on left: 102, on right: 97
unsigned_constant (148)
    on left: 103 104 105, on right: 111
unsigned_number (149)
    on left: 106 107 108, on right: 103
factor (150)
    on left: 109 110 111 112 113 114 115 116, on right: 115 117 118
term (151)
    on left: 117 118, on right: 117 126 127
term_operator_list (152)
    on left: 119 120 121 122 123, on right: 117
simple_expression (153)
    on left: 124 125, on right: 131 132
simple_expression_term_operator_iterable (154)
    on left: 126 127, on right: 124 125 126
simple_expression_term_operator_list (155)
    on left: 128 129 130, on right: 126
expression (156)
    on left: 131 132, on right: 100 101 114 145 151 152 162 163 176
    177 178 179 180 181 189 190 194 195
relational_operator (157)
    on left: 133 134 135 136 137 138 139, on right: 132
function_call (158)
    on left: 140, on right: 112
function_identifier (159)
    on left: 141, on right: 140 163
actual_parameter_list (160)
    on left: 142, on right: 140 165
actual_parameter_iterable (161)
    on left: 143 144, on right: 142 143
actual_parameter (162)
    on left: 145, on right: 143 144
procedure_identifier (163)
    on left: 146, on right: 164 165
set_constructor (164)
    on left: 147 148, on right: 113
member_group_list (165)
    on left: 149 150, on right: 148 149
member_group (166)
    on left: 151 152, on right: 149 150
statement (167)
    on left: 153 154 155 156 157 158, on right: 172 173 176 177 184
    185 190 191 192 196
simple_statement (168)
    on left: 159 160 161, on right: 155 157
assignment_statement (169)
    on left: 162 163, on right: 159
procedure_statement (170)
    on left: 164 165, on right: 160
goto_statement (171)
    on left: 166, on right: 161
structured_statement (172)
    on left: 167 168 169 170, on right: 156 158
compound_statement (173)
    on left: 171, on right: 42 167
statement_list (174)
    on left: 172 173, on right: 171 172 189
conditional_statement (175)
    on left: 174 175, on right: 168
if_statement (176)
    on left: 176 177, on right: 174
case_statement (177)
    on left: 178 179 180 181, on right: 175
case_list (178)
    on left: 182 183, on right: 178 179 180 181 182
case (179)
    on left: 184, on right: 182 183
otherwise_clause (180)
    on left: 185, on right: 179 180
repetitive_statement (181)
    on left: 186 187 188, on right: 169
repeat_statement (182)
    on left: 189, on right: 186
while_statement (183)
    on left: 190, on right: 187
for_statement (184)
    on left: 191 192, on right: 188
control_variable (185)
    on left: 193, on right: 191 192
initial_value (186)
    on left: 194, on right: 191 192
final_value (187)
    on left: 195, on right: 191 192
with_statement (188)
    on left: 196, on right: 170
record_variable_reference_list (189)
    on left: 197 198, on right: 196 197
procedure_declaration (190)
    on left: 199, on right: 40
procedure_body (191)
    on left: 200 201 202, on right: 199
procedure_heading (192)
    on left: 203 204, on right: 199 215
function_declaration (193)
    on left: 205, on right: 41
function_body (194)
    on left: 206 207 208, on right: 205
function_heading (195)
    on left: 209 210, on right: 205 216
formal_parameter_list (196)
    on left: 211, on right: 204 210
formal_parameter_list_iterable (197)
    on left: 212 213, on right: 211 212
formal_parameter_list_iterable_list (198)
    on left: 214 215 216, on right: 212 213
parameter_declaration (199)
    on left: 217 218, on right: 214
type_identifier (200)
    on left: 219, on right: 217 218


state 0

    0 $accept: . program $end

    "program"  shift, and go to state 1

    program          go to state 2
    program_heading  go to state 3


state 1

    3 program_heading: "program" . IDENTIFIER
    4                | "program" . IDENTIFIER '(' program_parameters ')'

    IDENTIFIER  shift, and go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: program_heading . ';' block
    2        | program_heading . ';' uses_clause ';' block

    ';'  shift, and go to state 6


state 4

    3 program_heading: "program" IDENTIFIER .
    4                | "program" IDENTIFIER . '(' program_parameters ')'

    '('  shift, and go to state 7

    $default  reduce using rule 3 (program_heading)


state 5

    0 $accept: program $end .

    $default  accept


state 6

    1 program: program_heading ';' . block
    2        | program_heading ';' . uses_clause ';' block

    "uses"   shift, and go to state 8
    "label"  shift, and go to state 9

    $default  reduce using rule 9 (label_declaration_part)

    uses_clause             go to state 10
    block                   go to state 11
    label_declaration_part  go to state 12


state 7

    4 program_heading: "program" IDENTIFIER '(' . program_parameters ')'

    IDENTIFIER  shift, and go to state 13

    program_parameters  go to state 14
    identifier_list     go to state 15


state 8

    6 uses_clause: "uses" . identifier_list

    IDENTIFIER  shift, and go to state 13

    identifier_list  go to state 16


state 9

    8 label_declaration_part: "label" . label_list ';'

    DECIMAL_INT  shift, and go to state 17

    label_list  go to state 18
    label       go to state 19


state 10

    2 program: program_heading ';' uses_clause . ';' block

    ';'  shift, and go to state 20


state 11

    1 program: program_heading ';' block .

    $default  reduce using rule 1 (program)


state 12

    7 block: label_declaration_part . constant_declaration_part type_declaration_part variable_declaration_part procedure_and_function_declaration_part statement_part

    "const"  shift, and go to state 21

    $default  reduce using rule 14 (constant_declaration_part)

    constant_declaration_part  go to state 22


state 13

   46 identifier_list: IDENTIFIER .

    $default  reduce using rule 46 (identifier_list)


state 14

    4 program_heading: "program" IDENTIFIER '(' program_parameters . ')'

    ')'  shift, and go to state 23


state 15

    5 program_parameters: identifier_list .
   45 identifier_list: identifier_list . ',' IDENTIFIER

    ','  shift, and go to state 24

    $default  reduce using rule 5 (program_parameters)


state 16

    6 uses_clause: "uses" identifier_list .
   45 identifier_list: identifier_list . ',' IDENTIFIER

    ','  shift, and go to state 24

    $default  reduce using rule 6 (uses_clause)


state 17

   12 label: DECIMAL_INT .

    $default  reduce using rule 12 (label)


state 18

    8 label_declaration_part: "label" label_list . ';'
   10 label_list: label_list . ',' label

    ';'  shift, and go to state 25
    ','  shift, and go to state 26


state 19

   11 label_list: label .

    $default  reduce using rule 11 (label_list)


state 20

    2 program: program_heading ';' uses_clause ';' . block

    "label"  shift, and go to state 9

    $default  reduce using rule 9 (label_declaration_part)

    block                   go to state 27
    label_declaration_part  go to state 12


state 21

   13 constant_declaration_part: "const" . constant_declaration_list

    IDENTIFIER  shift, and go to state 28

    constant_declaration_list  go to state 29
    constant_declaration       go to state 30


state 22

    7 block: label_declaration_part constant_declaration_part . type_declaration_part variable_declaration_part procedure_and_function_declaration_part statement_part

    "type"  shift, and go to state 31

    $default  reduce using rule 27 (type_declaration_part)

    type_declaration_part  go to state 32


state 23

    4 program_heading: "program" IDENTIFIER '(' program_parameters ')' .

    $default  reduce using rule 4 (program_heading)


state 24

   45 identifier_list: identifier_list ',' . IDENTIFIER

    IDENTIFIER  shift, and go to state 33


state 25

    8 label_declaration_part: "label" label_list ';' .

    $default  reduce using rule 8 (label_declaration_part)


state 26

   10 label_list: label_list ',' . label

    DECIMAL_INT  shift, and go to state 17

    label  go to state 34


state 27

    2 program: program_heading ';' uses_clause ';' block .

    $default  reduce using rule 2 (program)


state 28

   17 constant_declaration: IDENTIFIER . '=' constant ';'

    '='  shift, and go to state 35


state 29

   13 constant_declaration_part: "const" constant_declaration_list .
   15 constant_declaration_list: constant_declaration_list . constant_declaration

    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 13 (constant_declaration_part)

    constant_declaration  go to state 36


state 30

   16 constant_declaration_list: constant_declaration .

    $default  reduce using rule 16 (constant_declaration_list)


state 31

   26 type_declaration_part: "type" . type_declaration_list

    IDENTIFIER  shift, and go to state 37

    type_declaration_list  go to state 38
    type_declaration       go to state 39


state 32

    7 block: label_declaration_part constant_declaration_part type_declaration_part . variable_declaration_part procedure_and_function_declaration_part statement_part

    "var"  shift, and go to state 40

    $default  reduce using rule 32 (variable_declaration_part)

    variable_declaration_part  go to state 41


state 33

   45 identifier_list: identifier_list ',' IDENTIFIER .

    $default  reduce using rule 45 (identifier_list)


state 34

   10 label_list: label_list ',' label .

    $default  reduce using rule 10 (label_list)


state 35

   17 constant_declaration: IDENTIFIER '=' . constant ';'

    DECIMAL_INT    shift, and go to state 42
    HEXADECIMAL    shift, and go to state 43
    REAL_DECIMAL   shift, and go to state 44
    IDENTIFIER     shift, and go to state 45
    QUOTED_STRING  shift, and go to state 46
    QUOTED_CHAR    shift, and go to state 47
    '+'            shift, and go to state 48
    '-'            shift, and go to state 49

    constant             go to state 50
    constant_identifier  go to state 51
    sign                 go to state 52


state 36

   15 constant_declaration_list: constant_declaration_list constant_declaration .

    $default  reduce using rule 15 (constant_declaration_list)


state 37

   30 type_declaration: IDENTIFIER . '=' type ';'

    '='  shift, and go to state 53


state 38

   26 type_declaration_part: "type" type_declaration_list .
   28 type_declaration_list: type_declaration_list . type_declaration

    IDENTIFIER  shift, and go to state 37

    $default  reduce using rule 26 (type_declaration_part)

    type_declaration  go to state 54


state 39

   29 type_declaration_list: type_declaration .

    $default  reduce using rule 29 (type_declaration_list)


state 40

   31 variable_declaration_part: "var" . variable_declaration_list

    IDENTIFIER  shift, and go to state 13

    variable_declaration_list  go to state 55
    variable_declaration       go to state 56
    identifier_list            go to state 57


state 41

    7 block: label_declaration_part constant_declaration_part type_declaration_part variable_declaration_part . procedure_and_function_declaration_part statement_part

    "function"   shift, and go to state 58
    "procedure"  shift, and go to state 59

    $default  reduce using rule 37 (procedure_and_function_declaration_part)

    procedure_and_function_declaration_part  go to state 60
    procedure_and_function_declaration_list  go to state 61
    procedure_and_function_declaration       go to state 62
    procedure_declaration                    go to state 63
    procedure_heading                        go to state 64
    function_declaration                     go to state 65
    function_heading                         go to state 66


state 42

   20 constant: DECIMAL_INT .

    $default  reduce using rule 20 (constant)


state 43

   21 constant: HEXADECIMAL .

    $default  reduce using rule 21 (constant)


state 44

   22 constant: REAL_DECIMAL .

    $default  reduce using rule 22 (constant)


state 45

   25 constant_identifier: IDENTIFIER .

    $default  reduce using rule 25 (constant_identifier)


state 46

   23 constant: QUOTED_STRING .

    $default  reduce using rule 23 (constant)


state 47

   24 constant: QUOTED_CHAR .

    $default  reduce using rule 24 (constant)


state 48

   43 sign: '+' .

    $default  reduce using rule 43 (sign)


state 49

   44 sign: '-' .

    $default  reduce using rule 44 (sign)


state 50

   17 constant_declaration: IDENTIFIER '=' constant . ';'

    ';'  shift, and go to state 67


state 51

   18 constant: constant_identifier .

    $default  reduce using rule 18 (constant)


state 52

   19 constant: sign . constant_identifier

    IDENTIFIER  shift, and go to state 45

    constant_identifier  go to state 68


state 53

   30 type_declaration: IDENTIFIER '=' . type ';'

    DECIMAL_INT    shift, and go to state 42
    HEXADECIMAL    shift, and go to state 43
    REAL_DECIMAL   shift, and go to state 44
    IDENTIFIER     shift, and go to state 69
    QUOTED_STRING  shift, and go to state 46
    QUOTED_CHAR    shift, and go to state 47
    "string"       shift, and go to state 70
    "packed"       shift, and go to state 71
    "array"        shift, and go to state 72
    "record"       shift, and go to state 73
    "of"           shift, and go to state 74
    "set"          shift, and go to state 75
    "file"         shift, and go to state 76
    '+'            shift, and go to state 48
    '-'            shift, and go to state 49
    '('            shift, and go to state 77
    '^'            shift, and go to state 78

    constant             go to state 79
    constant_identifier  go to state 51
    sign                 go to state 52
    type                 go to state 80
    simple_type          go to state 81
    ordinal_type         go to state 82
    enumerated_type      go to state 83
    subrange_type        go to state 84
    string_type          go to state 85
    structured_type      go to state 86
    type_list            go to state 87
    array_type           go to state 88
    record_type          go to state 89
    set_type             go to state 90
    file_type            go to state 91
    pointer_type         go to state 92


state 54

   28 type_declaration_list: type_declaration_list type_declaration .

    $default  reduce using rule 28 (type_declaration_list)


state 55

   31 variable_declaration_part: "var" variable_declaration_list .
   33 variable_declaration_list: variable_declaration_list . variable_declaration

    IDENTIFIER  shift, and go to state 13

    $default  reduce using rule 31 (variable_declaration_part)

    variable_declaration  go to state 93
    identifier_list       go to state 57


state 56

   34 variable_declaration_list: variable_declaration .

    $default  reduce using rule 34 (variable_declaration_list)


state 57

   35 variable_declaration: identifier_list . ':' type ';'
   45 identifier_list: identifier_list . ',' IDENTIFIER

    ','  shift, and go to state 24
    ':'  shift, and go to state 94


state 58

  209 function_heading: "function" . IDENTIFIER ':' IDENTIFIER
  210                 | "function" . IDENTIFIER formal_parameter_list ':' IDENTIFIER

    IDENTIFIER  shift, and go to state 95


state 59

  203 procedure_heading: "procedure" . IDENTIFIER
  204                  | "procedure" . IDENTIFIER formal_parameter_list

    IDENTIFIER  shift, and go to state 96


state 60

    7 block: label_declaration_part constant_declaration_part type_declaration_part variable_declaration_part procedure_and_function_declaration_part . statement_part

    "begin"  shift, and go to state 97

    statement_part      go to state 98
    compound_statement  go to state 99


state 61

   36 procedure_and_function_declaration_part: procedure_and_function_declaration_list .
   38 procedure_and_function_declaration_list: procedure_and_function_declaration_list . procedure_and_function_declaration

    "function"   shift, and go to state 58
    "procedure"  shift, and go to state 59

    $default  reduce using rule 36 (procedure_and_function_declaration_part)

    procedure_and_function_declaration  go to state 100
    procedure_declaration               go to state 63
    procedure_heading                   go to state 64
    function_declaration                go to state 65
    function_heading                    go to state 66


state 62

   39 procedure_and_function_declaration_list: procedure_and_function_declaration .

    $default  reduce using rule 39 (procedure_and_function_declaration_list)


state 63

   40 procedure_and_function_declaration: procedure_declaration .

    $default  reduce using rule 40 (procedure_and_function_declaration)


state 64

  199 procedure_declaration: procedure_heading . ';' procedure_body ';'

    ';'  shift, and go to state 101


state 65

   41 procedure_and_function_declaration: function_declaration .

    $default  reduce using rule 41 (procedure_and_function_declaration)


state 66

  205 function_declaration: function_heading . ';' function_body ';'

    ';'  shift, and go to state 102


state 67

   17 constant_declaration: IDENTIFIER '=' constant ';' .

    $default  reduce using rule 17 (constant_declaration)


state 68

   19 constant: sign constant_identifier .

    $default  reduce using rule 19 (constant)


state 69

   25 constant_identifier: IDENTIFIER .
   50 type: IDENTIFIER .

    ".."      reduce using rule 25 (constant_identifier)
    $default  reduce using rule 50 (type)


state 70

   57 string_type: "string" . '[' DECIMAL_INT ']'

    '['  shift, and go to state 103


state 71

   58 structured_type: "packed" . type_list

    "array"   shift, and go to state 72
    "record"  shift, and go to state 73
    "of"      shift, and go to state 74
    "set"     shift, and go to state 75
    "file"    shift, and go to state 76

    type_list    go to state 104
    array_type   go to state 88
    record_type  go to state 89
    set_type     go to state 90
    file_type    go to state 91


state 72

   64 array_type: "array" . '[' index_type_list ']' "of" type

    '['  shift, and go to state 105


state 73

   67 record_type: "record" . "end"
   68            | "record" . field_list "end"

    IDENTIFIER  shift, and go to state 13
    "end"       shift, and go to state 106
    "case"      shift, and go to state 107

    identifier_list    go to state 108
    field_list         go to state 109
    fixed_part         go to state 110
    field_declaration  go to state 111
    variant_part       go to state 112


state 74

   89 file_type: "of" . type

    DECIMAL_INT    shift, and go to state 42
    HEXADECIMAL    shift, and go to state 43
    REAL_DECIMAL   shift, and go to state 44
    IDENTIFIER     shift, and go to state 69
    QUOTED_STRING  shift, and go to state 46
    QUOTED_CHAR    shift, and go to state 47
    "string"       shift, and go to state 70
    "packed"       shift, and go to state 71
    "array"        shift, and go to state 72
    "record"       shift, and go to state 73
    "of"           shift, and go to state 74
    "set"          shift, and go to state 75
    "file"         shift, and go to state 76
    '+'            shift, and go to state 48
    '-'            shift, and go to state 49
    '('            shift, and go to state 77
    '^'            shift, and go to state 78

    constant             go to state 79
    constant_identifier  go to state 51
    sign                 go to state 52
    type                 go to state 113
    simple_type          go to state 81
    ordinal_type         go to state 82
    enumerated_type      go to state 83
    subrange_type        go to state 84
    string_type          go to state 85
    structured_type      go to state 86
    type_list            go to state 87
    array_type           go to state 88
    record_type          go to state 89
    set_type             go to state 90
    file_type            go to state 91
    pointer_type         go to state 92


state 75

   87 set_type: "set" . "of" ordinal_type

    "of"  shift, and go to state 114


state 76

   88 file_type: "file" .

    $default  reduce using rule 88 (file_type)


state 77
